--- a/styles/style.css
+++ b/styles/style.css
@@ -3,4 +3,41 @@
 
 body {
   font-family: "Raleway", sans-serif;
+  margin: 0;
+  padding: 0;
+  width: auto;
+  height: 100vh;
+}
+header {
+  display: flex;
+  flex-direction: row wrap;
+  align-items: center;
+  justify-content: space-around;
+  margin: 0;
+  padding: 0;
+  width: auto;
+  height: 10%;
+  background-color: gray;
+}
+main {
+  display: flex;
+  flex-direction: row wrap;
+  align-items: center;
+  justify-content: space-between;
+  width: auto;
+  height: 80%;
+}
+footer {
+  display: flex;
+  flex-direction: row wrap;
+  align-items: center;
+  justify-content: space-around;
+  margin: 0;
+  padding: 0;
+  width: auto;
+  height: 10%;
+  background-color: grey;
+}
+.card {
+  border: 2px solid red;
 }
