--- a/styles/style.css
+++ b/styles/style.css
@@ -49,7 +49,7 @@ footer {
   justify-content: flex-start;
   align-items: center;
 }
-img[src="../assets/img/keyboard.webp"] {
+img[src="./assets/img/keyboard.webp"] {
   width: 12vw;
   border-radius: 10px;
   box-shadow: 2px 2px 6px hsla(0, 0%, 24%, 0.451);
