--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
   margin: 0;
   padding: 0;
   height: auto;
-  background: #edede9;
+  background: #edf2fb;
 }
 header {
   display: flex;
@@ -18,15 +18,74 @@ header {
   padding-left: 1.5rem;
   width: auto;
   height: 15vh;
-  background-color: #d6ccc2;
+  background-color: #61a5c2;
+  box-shadow: 0 2px 6px #3c3c3c;
 }
 main {
   display: flex;
   flex-direction: row wrap;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-around;
   width: auto;
-  height: 80vh;
+  height: 80%;
+}
+aside {
+  border: 2px solid red;
+  height: 80%;
+  width: 3vw;
+  position: absolute;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+article {
+  width: 25%;
+  height: 50vh;
+  margin: 2em;
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  border-radius: 10px;
+  box-shadow: 0 -2px 6px hsla(0, 0%, 24%, 0.451);
+}
+figure {
+  width: 15vw;
+  height: 100%;
+  border-radius: 10px;
+  box-shadow: 2px 2px 6px hsla(0, 0%, 24%, 0.451);
+}
+figcaption {
+  text-align: center;
+  background: #f5ebe0;
+  font-size: 12px;
+  font-weight: bold;
+}
+figure > img {
+  width: 15vw;
+  border-radius: 10px 10px 0 0;
+}
+section {
+  border-radius: 10px;
+  box-shadow: 2px 2px 6px hsla(0, 0%, 24%, 0.451);
+  width: 25%;
+  height: fit-content;
+  text-align: justify;
+  padding: 1em;
+  font-weight: bold;
+  line-height: 1.8em;
+  background: #a9d6e5;
+}
+@media screen and (max-width: 710px) {
+  main {
+    flex-flow: column nowrap;
+  }
+  section {
+    width: 75%;
+  }
+  article {
+    width: 75%;
+  }
 }
 footer {
   display: flex;
@@ -37,32 +96,6 @@ footer {
   padding: 0;
   width: auto;
   height: 5vh;
-  background-color: #d5bdaf;
-}
-
-.card {
-  border: 2px solid red;
-  width: 25%;
-  height: 50vh;
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: flex-start;
-  align-items: center;
-}
-img[src="./assets/img/keyboard.webp"] {
-  width: 12vw;
-  border-radius: 10px;
-  box-shadow: 2px 2px 6px hsla(0, 0%, 24%, 0.451);
-}
-.description {
-  /* border: 2px solid blue; */
-  border-radius: 25px;
-  box-shadow: 2px 2px 6px hsla(0, 0%, 24%, 0.451);
-  width: 25%;
-  height: fit-content;
-  text-align: center;
-  padding: 1em;
-  font-weight: bold;
-  line-height: 1.8em;
-  background: #d6ccc2;
+  background-color: #61a5c2;
+  box-shadow: 0 -2px 6px #3c3c3c;
 }
