--- a/style2.css
+++ b/style2.css
@@ -8,10 +8,20 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Raleway", verdana;
-  background: #e8eddf;
+  background: url(./assets/img/background.webp) center/cover;
 }
 img[src="./assets/img/icons/store_FILL0_wght400_GRAD0_opsz48.svg"] {
   filter: invert(1);
+  transition: 0.4s;
+  animation: 1s rotation cubic-bezier(0.29, 0.79, 0.31, 0.2);
+}
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 header {
   display: flex;
@@ -25,12 +35,18 @@ main {
   display: flex;
   flex-flow: row wrap;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
   text-align: justify;
   height: 100%;
+  backdrop-filter: blur(5px);
 }
-button {
-  border: 2px solid blue;
+aside {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  width: 2vw;
+  border: 1px solid blue;
 }
 section {
   width: 40%;
@@ -43,26 +59,33 @@ article {
   justify-content: center;
   width: 40%;
   margin: 1.5em;
-  border: 1px solid green;
+  border-radius: 10px;
+  /* box-shadow: 0 2px 5px hsla(120, 2%, 20%, 0.5); */
 }
 h3 {
-  width: 100%;
+  font-size: 2em;
+  width: 75%;
+  padding-bottom: 0.5em;
   text-align: center;
-  color: purple;
+  border-bottom: 1px solid #242423;
 }
 figure {
   text-align: center;
   margin: 0;
-  border: 1px solid yellow;
+  font-size: 0.8em;
+  font-weight: bold;
   width: 75%;
 }
 img[src="./assets/img/keyboard.webp"] {
   width: 20vw;
+  border-radius: 10px;
+  box-shadow: 0 2px 5px hsla(120, 2%, 20%, 0.5);
 }
 h4 {
   width: 100%;
+  font-size: 1.5em;
+  font-weight: bolder;
   text-align: center;
-  border: 1px solid blue;
 }
 footer {
   display: flex;
@@ -81,7 +104,11 @@ footer {
   article {
     width: 75%;
   }
-  img {
-    width: 30vw;
+  img[src="./assets/img/keyboard.webp"] {
+    width: 40vw;
+  }
+  aside {
+    width: 100%;
+    height: 2vh;
   }
 }
