--- a/style2.css
+++ b/style2.css
@@ -89,8 +89,10 @@ h4 {
 }
 footer {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
+  padding-bottom: 0.5em;
   color: whitesmoke;
   background: #242423;
 }
