--- a/style2.css
+++ b/style2.css
@@ -44,9 +44,25 @@ aside {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100%;
+  height: 1em;
+  padding: 1em;
+  width: 1em;
+  border-radius: 50%;
+  background: hsla(120, 2%, 20%, 0.5);
+}
+button {
+  background: url(./assets/img/icons/arrow.svg) no-repeat center/cover;
+  filter: invert(1);
   width: 2vw;
-  border: 1px solid blue;
+  height: 2vw;
+  border: none;
+}
+.left {
+  transform: rotate(180deg);
+}
+aside,
+button:hover {
+  cursor: pointer;
 }
 section {
   display: flex;
@@ -59,6 +75,7 @@ section {
   font-weight: bold;
   text-align: center;
   line-height: 2em;
+  animation: appear 1s cubic-bezier(0.29, 0.79, 0.31, 0.2);
 }
 article {
   display: flex;
@@ -111,6 +128,16 @@ footer {
   padding-bottom: 0.5em;
   color: whitesmoke;
   background: #242423;
+}
+a {
+  color: whitesmoke;
+  text-decoration: none;
+  font-size: 1.2em;
+  transition: 0.4s;
+}
+a:hover {
+  text-decoration: underline;
+  text-underline-position: under;
 }
 @media screen and (max-width: 700px) {
   main {
