--- a/style2.css
+++ b/style2.css
@@ -32,8 +32,20 @@ header {
   color: whitesmoke;
   padding: 0 1.5em;
 }
-
-/* Claviers */
+nav {
+  border: 1px solid red;
+}
+ul {
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0;
+  margin: 0;
+}
+li {
+  list-style-type: none;
+}
 
 /* Footer */
 
@@ -41,7 +53,7 @@ footer {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-between;
   padding-bottom: 0.5em;
   color: whitesmoke;
   background: #242423;
