--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 @import "./styles/normalize\ css";
 @import "./css/claviers.css";
+@import "./css/home.css";
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap");
 
 body {
@@ -32,8 +33,8 @@ header {
   color: whitesmoke;
   padding: 0 1.5em;
 }
-nav {
-  border: 1px solid red;
+header nav[itemprop="breadcrump"] {
+  width: 50%;
 }
 ul {
   display: flex;
@@ -57,6 +58,12 @@ footer {
   padding-bottom: 0.5em;
   color: whitesmoke;
   background: #242423;
+}
+footer nav {
+  width: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 a {
   color: whitesmoke;
