--- a/css/home.css
+++ b/css/home.css
@@ -5,8 +5,24 @@ main[itemtype="https://schema.org/WebPage"]
   justify-content: center;
   align-items: center;
 }
+section[itemtype="https://schema.org/Thing"]
+{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  background: #3c3c3c;
+  margin: 0;
+  margin-top: 1em;
+  padding: 0;
+}
 section[itemtype="https://schema.org/Thing"] img
 {
   border: 2px solid red;
   width: 5vw;
+}
+aside[itemprop="breadcrump"] {
+  margin: 0;
+  padding: 0;
+  width: fit-content;
 }
