--- a/css/home.css
+++ b/css/home.css
@@ -6,23 +6,97 @@ main[itemtype="https://schema.org/WebPage"]
   align-items: center;
   height: 100%;
 }
-section[itemtype="https://schema.org/Thing"]
-{
-  width: 100%;
-  background: #3c3c3c;
-  margin: 0;
-  margin-top: 1em;
-  padding: 0;
-}
 
-section[itemtype="https://schema.org/Thing"] img
-{
-  width: 10vw;
+.container {
+  width: 85%;
+  margin: 1.5em auto;
+  padding: 1em 0;
+  border-radius: 20px;
+  border: 1px solid red;
+  transition: all 0.4s ease-in-out;
 }
-aside[itemprop="breadcrump"] {
-  margin: 0;
+.carousel {
+  border-radius: 10px;
+  height: 100%;
+  overflow: hidden;
+  position: relative;
+}
+.slider {
+  height: 100%;
+  display: flex;
+  width: 400%;
+  transition: all 0.6s;
+}
+.slider section {
+  flex-basis: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.firstSection {
+  transition: 0.4s;
+  background: url(../assets/img/keyboard.webp) no-repeat center/cover;
+}
+.secondSection {
+  background: url(../assets/img/laptop.webp) no-repeat center/cover;
+}
+.thirdSection {
+  background: url(../assets/img/logo_lacapsule.webp) no-repeat center/cover;
+}
+.fourthSection {
+  background: url(../assets/img/mouse.webp) no-repeat center/cover;
+}
+.controls .arrow {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.arrow.left {
+  left: 0px;
+  height: 100%;
+  width: 50px;
+  transition: 0.3s ease-in-out;
+}
+.arrow.left img[src="./assets/img/icons/arrow.svg"] {
+  transform: rotate(180deg);
+}
+.arrow.right {
+  right: 0px;
+  height: 100%;
+  width: 50px;
+  transition: 0.3s ease-in-out;
+}
+.arrow.left:hover,
+.arrow.right:hover {
+  background: hsl(60, 1%, 14%);
+}
+.controls ul {
+  position: absolute;
+  bottom: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+  list-style: none;
+  display: flex;
   padding: 0;
-  width: fit-content;
+  margin: 0;
+  background-color: #f4f3ee65;
+  border-radius: 25px;
+}
+.controls ul li {
+  width: 8px;
+  height: 8px;
+  border: 2px solid #333;
+  border-radius: 50%;
+  margin: 10px;
+  background: transparent;
+  cursor: pointer;
+}
+.controls ul li.selected {
+  background: #333;
 }
 p {
   width: 50%;
@@ -32,9 +106,24 @@ p {
   line-height: 2em;
 }
 #video {
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
   width: 100%;
-  border: 1px solid red;
   height: fit-content;
   margin: 0;
   padding: 0;
+}
+#video iframe {
+  border-radius: 15px;
+  box-shadow: 0 0 10px #3c3c3c;
+  transition: 0.4s;
+  margin-bottom: 2em;
+}
+#video iframe:hover {
+  transform: scale(1.04);
+}
+#video h2 {
+  padding: 0;
+  margin: 1em 0;
 }
