--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 @import "./css/claviers.css";
 @import "./css/home.css";
 @import "./css/catalogue.css";
-@import "./css/contact.css"
+@import "./css/contact.css";
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap");
 
 body {
