--- a/css/catalogue.css
+++ b/css/catalogue.css
@@ -1,88 +1,77 @@
 main {
-    display: flex;
-    flex-direction: column;
-    width: auto;
+  display: flex;
+  flex-flow: column;
+  width: auto;
 }
 
+#uc .container {
+  width: 90%;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  background: rgba(245, 245, 245, 0.7);
+}
 article {
-    display: flex;
-    flex-flow: row nowrap;
-    align-items: center;
-    justify-content: space-between;
-    width: 80%;
-    margin: 2em;
-    padding: 1em 1.5em;
-    background-color: #242423df;
-    color: whitesmoke;
-    box-shadow: 2px 2px 6px rgb(76, 75, 75);
-    transition: 0.4s;
-    height: 15em;
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  justify-content: space-between;
+  width: 90%;
+  margin: 2em 5em;
+  padding: 1em 1.5em;
+  color: hsl(0, 0%, 20%);
+  transition: 0.4s;
+  height: 15em;
 }
 
 article:hover {
-    transform: scale(1.04);
+  transform: scale(1.04);
+  cursor: pointer;
 }
 
 h3[itemprop="description"] {
-    width: 25%;
+  width: 25%;
 }
-
-/* img[src="../assets/img/keyboard.webp"] {
-    width: 10vw;
-}
-
-img[src="../assets/img/screen.webp"] {
-    width: 10vw;
-}
-
-img[src="../assets/img/laptop.webp"] {
-    width: 10vw;
-}
-
-img[src="../assets/img/mouse.webp"] {
-    width: 10vw;
-}
-
-img[src="../assets/img/pc.webp"] {
-    width: 10vw;
-
-} */
-
 #uc p {
-    width: fit-content;
+  width: fit-content;
 }
 
 #uc div {
-    border-radius: 20px;
-    box-shadow: 2px 2px 6px rgb(118, 118, 118);
+  border-radius: 20px;
+  box-shadow: 2px 2px 6px rgb(118, 118, 118);
 }
 
 .clavier {
-    height: 95%;
-    width: 15em;
-    background: url(../assets/img/keyboard.webp) no-repeat center/cover;
+  height: 95%;
+  width: 15em;
+  background: url(../assets/img/keyboard.webp) no-repeat center/cover;
 }
 
 .screen {
-    height: 95%;
-    width: 15em;
-    background: url(../assets/img/screen.webp) no-repeat center/cover;
+  height: 95%;
+  width: 15em;
+  background: url(../assets/img/screen.webp) no-repeat center/cover;
 }
 
 .laptop {
-    height: 95%;
-    width: 15em;
-    background: url(../assets/img/laptop.webp) no-repeat center/cover;
+  height: 95%;
+  width: 15em;
+  background: url(../assets/img/laptop.webp) no-repeat center/cover;
 }
 
 .mouse {
-    height: 95%;
-    width: 15em;
-    background: url(../assets/img/mouse.webp) no-repeat center/cover;
+  height: 95%;
+  width: 15em;
+  background: url(../assets/img/mouse.webp) no-repeat center/cover;
 }
 
 .pc {
-    height: 95%;
-    width: 15em;
-    background: url(../assets/img/pc.webp) no-repeat center/cover;
+  height: 95%;
+  width: 15em;
+  background: url(../assets/img/pc.webp) no-repeat center/cover;
+}
+.pack {
+  height: 95%;
+  width: 15em;
+  background: url(../assets/img/pack.webp) no-repeat center/cover;
 }
