--- a/css/contact.css
+++ b/css/contact.css
@@ -1,31 +1,82 @@
+.contactContainer {
+  display: flex;
+  flex-flow: row wrap;
+  margin: 0;
+  padding: 0;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 100%;
+}
+#contact {
+  display: flex;
+  height: fit-content;
+  align-items: center;
+  flex-flow: column nowrap;
+}
+#contact h2 {
+  font-size: 2.5em;
+}
+address {
+  font-style: normal;
+  margin-bottom: 1em;
+}
+.map img {
+  width: 75%;
+  border: 1px solid hsl(0, 0%, 20%);
+  border-radius: 20px;
+  box-shadow: 0 0 10px hsla(0, 0%, 24%, 0.475);
+  transition: 0.4s;
+}
+.map img:hover {
+  transform: scale(1.05);
+}
+#contact h3 {
+  width: 100%;
+  font-size: 1.2em;
+  display: flex;
+  justify-content: space-between;
+  text-align: start;
+}
+#contact h3 a {
+  color: blue;
+}
+
 form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border: 2px solid grey;
-    width: 400px;
-    height: 800px;
-    margin: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 2px solid grey;
+  margin: 15px;
+  width: 50%;
 }
 
 label {
-    display: flex;
-    margin: 5px;
+  display: flex;
+  margin: 5px;
 }
 
 input {
-    display: flex;
-    margin: 5px;
+  margin: 5px;
 }
 
 textarea {
-    display: flex;
-    width: 300px;
-    height: 400px;
-    margin: 5px;
+  display: flex;
+  height: 400px;
+  margin: 5px;
 }
 
 button {
-    display: flex;
-    margin: 5px;
+  display: flex;
+  margin: 5px;
+}
+table {
+  width: 50%;
+  border: 1px solid red;
+  margin: 0;
+  padding: 0;
+}
+th {
+  width: 100%;
+  font-size: 2.8em;
+  text-align: center;
 }
