--- a/css/contact.css
+++ b/css/contact.css
@@ -15,6 +15,7 @@
 }
 #contact h2 {
   font-size: 2.5em;
+  border: none;
 }
 address {
   font-style: normal;
@@ -49,7 +50,14 @@ form {
   margin: 15px;
   width: 50%;
 }
-
+.contactContainer h2 {
+  width: 90%;
+  text-align: center;
+  font-size: 2.8em;
+  margin: 0;
+  padding: 1em 0;
+  border-top: 1px solid hsl(0, 0%, 20%);
+}
 label {
   display: flex;
   margin: 5px;
@@ -69,14 +77,16 @@ button {
   display: flex;
   margin: 5px;
 }
+
 table {
   width: 50%;
-  border: 1px solid red;
-  margin: 0;
+  margin-bottom: 2em;
+  border-top: 1px solid hsl(0, 0%, 20%);
   padding: 0;
 }
-th {
-  width: 100%;
-  font-size: 2.8em;
+td {
   text-align: center;
+  height: 4em;
+  font-size: 1.5em;
+  font-weight: bold;
 }
