--- a/css/contact.css
+++ b/css/contact.css
@@ -1,3 +1,5 @@
+/* Coordonées */
+
 .contactContainer {
   display: flex;
   flex-flow: row wrap;
@@ -42,14 +44,58 @@ address {
   color: blue;
 }
 
+/* Formulaire */
+
 form {
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: 2px solid grey;
-  margin: 15px;
   width: 50%;
 }
+input {
+  width: 50%;
+  padding: 1em;
+  height: 1.5em;
+  outline: none;
+  border-radius: 15px;
+  font-family: "Raleway", verdana;
+  font-weight: bold;
+}
+textarea {
+  width: 50%;
+  padding: 1em;
+  outline: none;
+  height: auto;
+  resize: none;
+  border-radius: 25px;
+  box-shadow: 0 0 10px hsla(0, 0%, 24%, 0.475);
+  font-family: "Raleway", verdana;
+  font-weight: bold;
+}
+button {
+  width: 10%;
+  height: 3em;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: "Raleway", verdana;
+  font-weight: bold;
+  border-radius: 5px;
+  border: none;
+  box-shadow: 0 0 10px hsla(0, 0%, 24%, 0.475);
+  transition: 0.4s;
+}
+button:hover {
+  cursor: pointer;
+  background: hsl(0, 0%, 20%);
+  color: whitesmoke;
+  transform: scale(1.1);
+}
+
+/* Tableau des horaires */
+
 .contactContainer h2 {
   width: 90%;
   text-align: center;
