--- a/css/catalogue.css
+++ b/css/catalogue.css
@@ -5,18 +5,19 @@ main {
 }
 
 #uc .container {
-  width: 90%;
+  width: 85%;
   display: flex;
-  flex-flow: column;
+  flex-flow: column wrap;
   align-items: center;
   background: rgba(245, 245, 245, 0.7);
 }
+
 article {
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
   justify-content: space-between;
-  width: 90%;
+  width: 70%;
   margin: 2em 5em;
   padding: 1em 1.5em;
   color: hsl(0, 0%, 20%);
@@ -30,8 +31,10 @@ article:hover {
 }
 
 h3[itemprop="description"] {
-  width: 25%;
+  width: 40%;
+  text-size-adjust: auto;
 }
+
 #uc p {
   width: fit-content;
 }
@@ -70,6 +73,7 @@ h3[itemprop="description"] {
   width: 15em;
   background: url(../assets/img/pc.webp) no-repeat center/cover;
 }
+
 .pack {
   height: 95%;
   width: 15em;
