Font size catalogue updated

--- a/css/catalogue.css
+++ b/css/catalogue.css
@@ -32,8 +32,18 @@ article:hover {
 
 h3[itemprop="description"] {
   width: 40%;
-  text-size-adjust: auto;
+  font-size: 1.3em;
 }
+@media screen and (max-width: 1300px) {
+  h3[itemprop="description"] {
+    font-size: 0.8em;
+  }
+}
+/* @media screen and (max-width: 1100px) {
+  article {
+    flex-direction: column;
+  }
+} */
 
 #uc p {
   width: fit-content;
