--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import "./styles/normalize\ css";
+@import "./styles/normalize.css";
 @import "./css/claviers.css";
 @import "./css/home.css";
 @import "./css/catalogue.css";
