Responsive catalogue.css à revoir

--- a/css/catalogue.css
+++ b/css/catalogue.css
@@ -14,7 +14,7 @@ main {
 
 article {
   display: flex;
-  flex-flow: row nowrap;
+  flex-flow: row wrap;
   align-items: center;
   justify-content: space-between;
   width: 70%;
@@ -39,14 +39,21 @@ h3[itemprop="description"] {
     font-size: 0.8em;
   }
 }
-/* @media screen and (max-width: 1100px) {
+@media screen and (max-width: 1100px) {
   article {
     flex-direction: column;
+    height: auto;
+    border: 1px solid red;
   }
-} */
+  article div {
+    border: 1px solid green;
+    height: 150px;
+  }
+}
 
 #uc p {
   width: fit-content;
+  margin: 1em;
 }
 
 #uc div {
@@ -56,36 +63,36 @@ h3[itemprop="description"] {
 
 .clavier {
   height: 95%;
-  width: 15em;
+  width: 20%;
   background: url(../assets/img/keyboard.webp) no-repeat center/cover;
 }
 
 .screen {
   height: 95%;
-  width: 15em;
+  width: 20%;
   background: url(../assets/img/screen.webp) no-repeat center/cover;
 }
 
 .laptop {
   height: 95%;
-  width: 15em;
+  width: 20%;
   background: url(../assets/img/laptop.webp) no-repeat center/cover;
 }
 
 .mouse {
   height: 95%;
-  width: 15em;
+  width: 20%;
   background: url(../assets/img/mouse.webp) no-repeat center/cover;
 }
 
 .pc {
   height: 95%;
-  width: 15em;
+  width: 20%;
   background: url(../assets/img/pc.webp) no-repeat center/cover;
 }
 
 .pack {
   height: 95%;
-  width: 15em;
+  width: 20%;
   background: url(../assets/img/pack.webp) no-repeat center/cover;
 }
