--- a/style.css
+++ b/style.css
@@ -45,7 +45,8 @@ header {
 }
 
 header nav[itemprop="breadcrump"] {
-  width: 50%;
+  width: 100%;
+  border: 1px solid red;
 }
 
 ul {
@@ -98,20 +99,39 @@ a:hover {
     flex-direction: column;
   }
 
-  section {
-    width: 75%;
+  #logo {
+    width: 1.5em;
+    margin: 1em;
   }
 
-  article {
+  header {
+    height: 10vh;
+  }
+
+  nav {
+    width: 100%;
+    font-size: 0.8em;
+  }
+
+  section {
     width: 75%;
   }
 
   img[src="./assets/img/keyboard.webp"] {
     width: 40vw;
   }
+  iframe {
+    width: 75%;
+    height: 25vh;
+  }
 
-  aside {
+  .container,
+  .carousel {
     width: 100%;
-    height: 2vh;
+    height: 25vh;
+  }
+
+  .acceuil p {
+    font-size: 0.8em;
   }
 }
